# GM-Ellipsoid

./: CMakeLists.txt  ellipsoid.cpp  ellipsoid.h  helpers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_type.h  open_gl_area.cpp  open_gl_area.h  pmath.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  scene.h  scene_info.h  transformation.h
common/: position_normal_vertex_shader.glsl  position_normal_vertex_shader.h  position_params.cpp  position_params.h  position_params.ui  rename_ui.cpp  rename_ui.h  rename_ui.ui  shape_indices.h  single_color_phong.h  white.h
common/single_color_phong/: vertex_shader.glsl
common/white/: fragment_shader.glsl
cursor/: cursor.cpp  cursor.h  fragment_shader.glsl  screen_position_dialog.cpp  screen_position_dialog.h  screen_position_dialog.ui  screen_position_params.cpp  screen_position_params.h  screen_position_params.ui
ellipsoid/: ellipsoid.cpp  ellipsoid.h  ellipsoid_window.cpp  ellipsoid_window.h  ellipsoid_window.ui  mainwindow.cpp  mainwindow.ui  renderer.h
math/: pmat4.h  pquat.h  pvec4.h
point/: point.cpp  point.h
polyline/: geometry_shader.glsl  polyline.cpp  polyline.h  vertex_shader.glsl
scene/: camera.h  model.h  projection.h
torus/: fragment_shader.glsl  torus.cpp  torus.h  torus_params.cpp  torus_params.h  torus_params.ui  torus_window.cpp  torus_window.h  torus_window.ui  vertex_shader.glsl
window/: add_object_dialog.cpp  add_object_dialog.h  add_object_dialog.ui  general_params.ui  main_window.cpp  main_window.h  main_window.ui  open_gl_area.cpp  open_gl_area.h
